# story_generator

./: README.md  example.py  pyproject.toml
src/story_generator/: decorators.py  grok.py  instructions.py  messages.py  pages.py  title.py
summaries/: .gitignore
summaries/Example/: page1.txt  page2.txt  page3.txt
tests/: test_grok.py  test_instructions.py  test_messages.py  test_pages.py
