[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "story_generator"
version = "0.1.0"
authors = [
    { name = "Chris O'Connell", email = "chris@chrisoconnell.info" },
]
description = "Use the power of AI to create stories"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
